c2prj1_cards/grade.txt
Grading at Wed Jun 10 05:50:33 UTC 2020
Compiling cards.c
cards.c: In function ‘value_letter’:
cards.c:44:22: error: ‘J’ undeclared (first use in this function)
   case 11 :c.value = J; break ;
                      ^
cards.c:44:22: note: each undeclared identifier is reported only once for each function it appears in
cards.c:45:22: error: ‘Q’ undeclared (first use in this function)
   case 12 :c.value = Q; break ;
                      ^
cards.c:46:23: error: ‘K’ undeclared (first use in this function)
   case 13 : c.value = K; break ;
                       ^
cards.c:47:23: error: ‘A’ undeclared (first use in this function)
   case 14 : c.value = A ; break ;
                       ^
cards.c: In function ‘suit_letter’:
cards.c:58:25: error: ‘s’ undeclared (first use in this function)
   case SPADES : c.suit= s ; break ;
                         ^
cards.c:59:25: error: ‘h’ undeclared (first use in this function)
   case HEARTS : c.suit= h ; break ;
                         ^
cards.c:60:27: error: ‘d’ undeclared (first use in this function)
   case DIAMONDS : c.suit= d ; break ;
                           ^
cards.c:61:21: error: incompatible types when assigning to type ‘suit_t {aka enum <anonymous>}’ from type ‘card_t {aka struct card_tag}’
   case CLUBS :c.suit= c ; break ;
                     ^
cards.c:62:27: error: ‘n’ undeclared (first use in this function)
   case NUM_SUITS :c.suit= n ; break;
                           ^
Could not compile your card.c!

Overall Grade: FAILED
